--- a/components/background.html
+++ b/components/background.html
@@ -1,6 +1,6 @@
 <div class="background">
     <div class="relative opacity-30">
-        <div class="absolute p-1 border border-gray-500 top-20 -left-16 md:top-32 md:left-20">
+        <div class="absolute p-1 border border-gray-500 top-20 -left-16 md:top-14 md:left-10">
             <div x-data="{ angle: 0 }" x-init="setInterval(() => { angle += 45; }, 10000)" class="dot-box" 
                 x-bind:style="'transform: rotate(' + angle + 'deg); transition: transform 0.5s;'">
             </div>
@@ -34,23 +34,23 @@
                 <div class="relative z-10 w-10 h-10 bg-gray-200 shadow-xl md:w-20 md:h-20 bgspin rounded-xl"></div>
                 <div class="relative w-10 h-10 bg-teal-400 md:w-20 md:h-20 left-2 md:left-6 bottom-8 md:bottom-16 bgspin rounded-xl"></div>
             </div>
-            <div class="md:pl-[2%] relative z-10 pt-[40%] md:pt-[18%]">
+            <div class="md:pl-[2%] relative z-10 pt-[40%] md:pt-[6%]">
                 <div class="relative z-10 w-6 h-6 bg-gray-200 shadow-xl md:w-10 md:h-10 bgspin rounded-xl"></div>
                 <div class="relative w-6 h-6 bg-teal-400 md:w-10 md:h-10 left-2 bottom-6 bgspin rounded-xl"></div>
             </div>
         </div>
 
         <!-- Second Row of Shapes -->
-        <div class="flex flex-row opacity-35 mt-[80%] md:mt-[10%]">
-            <div class="pr-[10%] relative z-10 pt-[10%]">
+        <div class="flex flex-row opacity-35 mt-[80%] md:mt-[3%]">
+            <div class="pr-[8%] relative z-10 pt-[90%]">
                 <div class="relative z-10 w-6 h-6 bg-gray-200 shadow-xl md:w-10 md:h-10 bgspin rounded-xl"></div>
                 <div class="relative w-6 h-6 bg-teal-400 md:w-10 md:h-10 left-2 bottom-6 bgspin rounded-xl"></div>
             </div>
-            <div class="pt-[10%]">
+            <div class="pt-[35%]">
                 <div class="relative z-10 w-10 h-10 bg-teal-400 shadow-xl md:w-20 md:h-20 bgspin rounded-xl"></div>
                 <div class="relative w-10 h-10 bg-gray-200 md:w-20 md:h-20 left-2 md:left-6 bottom-8 md:bottom-16 bgspin rounded-xl"></div>
             </div>
-            <div class="pl-[2%] relative z-10 pt-[18%]">
+            <div class="pl-[2%] relative z-10 pt-[1%]">
                 <div class="relative z-10 w-6 h-6 bg-gray-200 shadow-xl md:w-10 md:h-10 bgspin rounded-xl"></div>
                 <div class="relative w-6 h-6 bg-teal-400 md:w-10 md:h-10 left-2 bottom-6 bgspin rounded-xl"></div>
             </div>
@@ -65,24 +65,24 @@
         </div>
 
         <!-- Fourth Row of Shapes -->
-        <div class="flex flex-row opacity-35 mt-[98%] md:mt-[15%]">
-            <div class="pr-[3%] relative z-10 pt-[40%]">
+        <div class="flex flex-row opacity-35 mt-[98%] md:mt-[12%]">
+            <div class="pl-[23%] relative z-10 pt-[90%]">
                 <div class="relative z-10 w-6 h-6 bg-gray-200 shadow-xl md:w-10 md:h-10 bgspin rounded-xl"></div>
                 <div class="relative w-6 h-6 bg-teal-400 md:w-10 md:h-10 left-2 bottom-6 bgspin rounded-xl"></div>
             </div>
-            <div class="pt-[30%]">
+            <div class="pt-[20%]">
                 <div class="relative z-10 w-10 h-10 bg-teal-400 shadow-xl md:w-20 md:h-20 bgspin rounded-xl"></div>
                 <div class="relative w-10 h-10 bg-gray-200 md:w-20 md:h-20 left-2 md:left-6 bottom-8 md:bottom-16 bgspin rounded-xl"></div>
             </div>
-            <div class="relative z-10 pt-[18%]">
+            <div class="relative z-10 pt-[15%]">
                 <div class="relative z-10 w-6 h-6 bg-teal-400 shadow-xl md:w-10 md:h-10 bgspin rounded-xl"></div>
                 <div class="relative w-6 h-6 bg-gray-200 md:w-10 md:h-10 left-2 bottom-6 bgspin rounded-xl"></div>
             </div>
-            <div class="relative z-10 pt-[30%]">
+            <div class="relative z-10 pl-[11%] pt-[55%]">
                 <div class="relative z-10 w-6 h-6 bg-gray-200 shadow-xl md:w-10 md:h-10 bgspin rounded-xl"></div>
                 <div class="relative w-6 h-6 bg-teal-400 md:w-10 md:h-10 left-2 bottom-6 bgspin rounded-xl"></div>
             </div>
-            <div class="pt-[10%]">
+            <div class="pl-[2%]">
                 <div class="relative z-10 w-10 h-10 bg-gray-200 shadow-xl md:w-20 md:h-20 bgspin rounded-xl"></div>
                 <div class="relative w-10 h-10 bg-teal-400 md:w-20 md:h-20 left-2 md:left-6 bottom-8 md:bottom-16 bgspin rounded-xl"></div>
             </div>
