--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,25 @@ html {
 
 .animate-up {
     opacity: 0;
-    transform: translateY(20px); /* Start slightly below */
+    transform: translateY(100px); /* Start slightly below */
+    transition: opacity 0.1s ease, transform 0.4s ease; /* Add transition */
+}
+
+.animate-down {
+    opacity: 0;
+    transform: translateY(-100px); /* Start slightly below */
+    transition: opacity 0.1s ease, transform 0.4s ease; /* Add transition */
+}
+
+.animate-left {
+    opacity: 0;
+    transform: translateX(200px); /* Start slightly below */
+    transition: opacity 0.1s ease, transform 0.4s ease; /* Add transition */
+}
+
+.animate-right {
+    opacity: 0;
+    transform: translateX(-200px); /* Start slightly below */
     transition: opacity 0.1s ease, transform 0.4s ease; /* Add transition */
 }
 
