--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,12 @@ html {
     transition: opacity 0.1s ease, transform 0.4s ease; /* Add transition */
 }
 
+.animate-right-b {
+    opacity: 0;
+    transform: translateX(-100px); /* Start slightly below */
+    transition: opacity 2s ease, transform 1s ease; /* Add transition */
+}
+
 [x-cloak] {
     display: none;
 }
