--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,13 @@ html {
 .animate-right-b {
     opacity: 0;
     transform: translateX(-100px); /* Start slightly below */
-    transition: opacity 2s ease, transform 1s ease; /* Add transition */
+    transition: opacity 0.5s ease, transform 0.8s ease; /* Add transition */
+}
+
+.animate-right-c {
+    opacity: 0;
+    transform: translateX(-100px); /* Start slightly below */
+    transition: opacity 1.1s ease, transform 1.5s ease; /* Add transition */
 }
 
 [x-cloak] {
