--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,11 @@ html {
     transition: transform 0.2s ease-in-out;
 }
 
+.aboutme {
+    object-fit: cover;
+    border-radius: 100%;
+}
+
 .waving-video:hover {
     transform: scale(1.05);
 }
